# TransactionManager

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: .env.example  Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/api/: auth_router.py  contractor_router.py  status_router.py  transaction_router.py  transaction_type_router.py  user_router.py
backend/app/core/: security.py
backend/app/core/config/: settings.py
backend/app/db/: models.py  session.py
backend/app/domain/: models.py  value_objects.py
backend/app/repositories/: base.py  contractor_repo.py  status_repo.py  transaction_repo.py  transaction_type_repo.py  user_repo.py
backend/app/schemas/: auth.py  contractor.py  status.py  transaction.py  transaction_type.py  user.py
backend/app/services/: auth_service.py  contractor_service.py  status_service.py  transaction_service.py  transaction_type_service.py  user_service.py
backend/tests/: conftest.py
backend/tests/integration/: test_auth.py  test_contractors.py  test_transactions.py
backend/tests/unit/: test_transaction_service.py
db/: Dockerfile
db/config/: postgres.conf
db/init/: 01_schema.sql  02_mock_data.sql  03_test_db.sql  04_test_schema.sql
frontend/: Dockerfile  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
frontend/e2e/: login.spec.ts
frontend/src/: App.vue  shims-vue.d.ts
frontend/src/assets/: main.css
frontend/test-results/: .last-run.json
(+36 files in other folders)
